--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,59 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <section class="blue-part">
+    <div class="initial">
+    <img class="logo" src="./images/brand.png" />
+    <div class="button">
+        <button class="btn"><img class="btn-img" src="images/home.png" height="20" width="20"/>   Log In</button>
+    </div>
+    </div>
+  </section>
 
-  Capture and Share the World's Moments
+  <section class="white-part">
+    <div class="last-items">
+      <img class="phones" src="images/phones.png" />
+<div class="text-box">
+    <div class="text">
+      <h3>Capture and Share<br>
+          the World's Moments</h3>
+      <p> Instagram is a fast, beautiful and fun way to share your life<br>
+          with friends and family.<br> <br />
+        
+          Take a picture or video, choose a filter to transform its look<br>
+          and feel, then post to Instagram &mdash; it's that easy. You can<br>
+          even share to Facebook, Twitter, Tumblr and more. It's a<br>
+          new way to see the world.<br><br />
+        
+          Oh yeah, did we mention it's free?</p>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div>
+        <div class="stores">
+          <img src="images/badge-iphone.png" />
+          <img src="images/badge-android.png" />
+        </div>
+      </div>
+      </div>
+  </section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer class="footer">
+    <ul class="list">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+  <p>&copy; 2014 Instagram</p>
+</footer>
 </body>
 </html>
