--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body>
-  Instagram
+  <div class="blue">
+    <div class="layout">
 
-  Capture and Share the World's Moments
+      <div class="phones">
+        <img src="images/phones.png"></div>
+      <div class="header">
+        <div class="logo">
+          <img src="images/brand.png">
+          <div class="login"><img src="images/home.png" />
+            <p>Log in</p>
+          </div>
+        </div>
+        <div class="description">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
+            friends
+            and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+          <img src="images/badge-iphone.png" /> <img src="images/badge-android.png" />
+        </div>
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    </div>
+  </div>
+  <footer>
+    <a href=".html">About Us </a>
+    <a href=".html">Support </a>
+    <a href=".html">Blog </a>
+    <a href=".html">Press </a>
+    <a href=".html">API </a>
+    <a href=".html">Jobs </a>
+    <a href=".html">Privacy </a>
+    <a href=".html">Terms </a>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    <span>&copy; 2014 Instagram</span>
+  </footer>
 </body>
+
 </html>
