--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <link rel="stylesheet" href="../starter-code/css/main.css" />
+    <title>Instagram</title>
+  </head>
+  <body>
+    <div class="main-div">
+      <div class="phone">
+        <img src="./images/phones.png" alt="phone" />
+      </div>
+      <section>
+        <header>
+          <img src="./images/brand.png" alt="Instagram logo" />
+          <button class="btn">
+            <img src="./images/home.png" alt="home icon" />
+            <p>Log in</p>
+          </button>
+        </header>
+        <div class="text-div">
+          <h1>Capture and Share</br> the World's Moments</h1>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+            friends and family.
+          </p>
+          <h5>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </h5>
+          <h5>Oh yeah, did we mention it's free?</h5>
 
-  Capture and Share the World's Moments
+          <div class="badges">
+            <img src="./images/badge-iphone.png" alt="iphone badge" />
+            <img src="./images/badge-android.png" alt="android badge" />
+          </div>
+        </div>
+      </section>
+    </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+    <nav>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </body>
 </html>
