instaClone - as done as it will be

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="background">
+    <div class="container">
+      <img src="images/phones.png" alt="iphones featuring the instagram app">
+      <div class="sub-container-1">
+        <header class="logo-login">
+          <img src="images/brand.png" alt="google app store logo">
+          <div class="login"><img src="images/home.png" alt="google app store logo">
+            <p>Login</p>
+          </div>
+        </header>
+        <div class="site-description">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </div>
+        <div class="app-store-buttons">
+          <img src="images/badge-iphone.png" alt="apple app store logo" />
+          <img src="images/badge-android.png" alt="google app store logo">
+        </div>
+      </div>
+    </div>
+    <nav class="list-container">
+      <ul>
+        <li class="list-items">About Us</li>
+        <li class="list-items">Support</li>
+        <li class="list-items">Blog</li>
+        <li class="list-items">Press</li>
+        <li class="list-items">API</li>
+        <li class="list-items">Jobs</li>
+        <li class="list-items">Privacy</li>
+        <li class="list-items">Terms</li>
+        <li class="copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </nav>
+  </div>
 </body>
+
 </html>
+
+
+
+
+
+
+
+
+
+
+
+Get it on Google Play
