--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <div class="gradientBG"></div>
+    <div class="main">
+      <div class="bodyContent">
+        <section class="section1">
+          <img src="./images/phones.png" alt="Two standing phones displayed" />
+        </section>
 
-  Capture and Share the World's Moments
+        <section class="section2">
+          <div class="instagramTitle">
+            <img
+              src="./images/brand.png"
+              alt="Instagram name and branding logo"
+            />
+            <a class="login" href="#">
+              <div class="loginButton">
+                <img class="homeIcon" src="./images/home.png" alt="home icon" />
+                <p>Log in</p>
+              </div>
+            </a>
+          </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          <div class="textContent">
+            <h1 class="bodyTextTitle">Capture and Share the World's Moments</h1>
+            <p>
+              Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share
+              your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram &mdash; it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+            <div class="downloads">
+              <a href="#">
+                <img
+                  src="./images/badge-iphone.png"
+                  alt="App store download button"
+                />
+              </a>
+              <a href="#"
+                ><img
+                  src="./images/badge-android.png"
+                  alt="Google play download button"
+              /></a>
+            </div>
+          </div>
+        </section>
+      </div>
+      <div class="footer">
+        <div class="footerLinks">
+          <a href="#">About Us</a>
+          <a href="#">Support</a>
+          <a href="#">Blog</a>
+          <a href="#">Press</a>
+          <a href="#">API</a>
+          <a href="#">Jobs</a>
+          <a href="#">Privacy</a>
+          <a href="#">Terms</a>
+        </div>
+        <div class="copyright">
+          <a href="#">&copy; 2014 Instagram</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
