--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,54 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="/labs/lab-css-instagram-clone/starter-code/css/main.css">
 </head>
 <body>
-  Instagram
+  <main class="content">
 
-  Capture and Share the World's Moments
+      <div class="left-block">
+        <img src="images/phones.png" alt="smartphones">
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="right-block">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div class="right-block-head">
+          <img src='images/brand.png' alt='instagram-logo'>
+            <button class='homebutton'>
+              <img src='images/home.png' alt='homesymbol'>
+              <p>Log In</p>
+            </button>
+        </div>
 
-  Oh yeah, did we mention it's free?
+        <div class="text-box shadowed">
+          <h1>
+              Capture and Share <br>
+              the World's Moments
+          </h1>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>  Oh yeah, did we mention it's free?</p>
+          <div class="app-store">
+            <img src="images/badge-iphone.png" alt="iOS">
+            <img src="images/badge-android.png" alt="android">
+          </div>
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+      </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </main>
+  <footer>
+    <div>
+      <p>About Us</p>
+      <p>Support</p>
+      <p>Blog</p>
+      <p>Press</p>
+      <p>API</p>
+      <p>Jobs</p>
+      <p>Privacy</p>
+      <p>Terms</p>
+      <p>&copy; 2014 Instagram</p>
+    </div>
+    </footer>
 </body>
 </html>
