--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body>
-  Instagram
+  <section class="background">
+    <div class="main-div">
+      <img id="phones" src="images/phones.png" alt="smartphones" />
+      <div class="right-container">
+        <div class="login">
+          <img id="instagram" src="images/brand.png" alt="brand" />
+          <button type="button">
+            <img id="home" src="images/home.png" alt="home icon" />
+            <p>Log In</p>
+          </button>
+        </div>
+        <div class="container">
+          <h3>Capture and Share the World's Moments</h3>
+          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          </p>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+            it's
+            that
+            easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div class="downloads"></div>
+          <img id="download" src="images/badge-iphone.png" alt="appstore" />
+          <img id="download" src="images/badge-android.png" alt="googleplay" />
+        </div>
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </section>
 </body>
+
 </html>
