--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
 </head>
+<link rel="stylesheet" href="/starter-code/css/main.css">
+
 <body>
-  Instagram
+  <main>
+    <img src="./images/phones.png" alt="phoneimages">
+    <div class="mainContainer">
+      <nav>
+        <img src="./images/brand.png" alt="instagramlogo">
+        <button>
+          <img src="./images/home.png" alt="homeicon">
+          <p>Log in</p>
+        </button>
+      </nav>
 
-  Capture and Share the World's Moments
+      <article class="textContainer">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>
+          Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          <br>
+          <br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br>
+          <br>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+          Oh yeah, did we mention it's free?
+        </p>
+        <div>
+          <img src="./images/badge-iphone.png" alt="iosicon">
+          <img src="./images/badge-android.png" alt="androidicon">
+        </div>
+      </article>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    </div>
+  </main>
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li> &copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
