--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+  <title>Instagram!</title>
 </head>
 <body>
   Instagram
+
+
+
+
 
   Capture and Share the World's Moments
 
