--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <main>
+    <div class="main-image">
+      <img src="./images/phones.png" alt="" class="src">
+    </div>
+    <div class="main-content">
+      <div class="igLogo">
+        <img src="./images/brand.png" alt="" class="src">
+        <a href="#"><img src="./images/home.png" alt="" class="src"><span>Log In</span></a>
+      </div>
+      <div class="description">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that asy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+        <div class="social-buttons">
+          <a href="#"><img src="images/badge-android.png" alt="Get it on Google Play"></a>
+          <a href="#"><img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>Api</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="last">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </main>
 </body>
 </html>
