--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
+<body class="gradient-bg">
+  <section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="left">
+      <img src="./images/phones.png" alt="">
+    </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <div class="right">
+      <header>
+        <img src="./images/brand.png" alt="Instagram">
+        <button><img src="./images/home.png" alt="Home icon">Log in</button>
+      </header>
+      <div class="content">
+        <h1>Capture and Share the World's Moments</h1>
+        <p>Instagram is a <span class="em">fast, beautiful</span> and <span class="em">fun</span> way to share your life
+          with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
 
-  Oh yeah, did we mention it's free?
+        <div>
+          <a href="#">
+            <img src="./images/badge-iphone.png" alt="Download on the App Store">
+          </a>
+          <a href="#">
+            <img src="./images/badge-android.png" alt="Get it on Google Play">
+          </a>
+        </div>
+      </div>
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  </section>
+  <footer>
+    <ul>
+      <li><a href="#">About us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li class="copyright">&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
 </body>
+
 </html>
