--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <section class="container">
+    <div class="left">
+      <img src="images/phones.png" alt="moviles">
+    </div>
 
-  Capture and Share the World's Moments
+    <div class="right">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div id="title">
+        <img src="images/brand.png">
+        <button> <img src="images/home.png" type="button">Log in</button>
+      </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <div class="fondo">
+        <h1> Capture and Share the World's Moments </h1>
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong> fun</strong> way to share your life with friends
+          and
+          family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <div>
+          <a href="linkk"> <img src="images/badge-iphone.png" alt="Download on the App Store"></a>
+          <a href="link2"> <img src="images/badge-android.png" alt="Get in on Google Play"></a>
+        </div>
+      </div>
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+    </div>
+  </section>
 
-  &copy; 2014 Instagram
+  <footer>
+    <nav id="barralinks">
+      <a href="About us"> ABOUT US</a>
+      <a href="Support">SUPPORT</a>
+      <a href="Blog">BLOG</a>
+      <a href="Press">PRESS</a>
+      <a href="API">API</a>
+      <a href="Jobs">JOBS</a>
+      <a href="Privacy">PRIVACY</a>
+      <a href="Terms">TERMS</a>
+      <a class="cp"> &copy; 2014 INSTAGRAM</a>
+    </nav>
+  </footer>
 </body>
+
 </html>
