--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,28 +4,47 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <header>
+    <img src="./images/brand.png" alt="Instagram">
+    <button class="btn-login"><img src="./images/home.png" alt="home icon">Log In</button>
+  </header>
+  <section class="info">
+    <article>
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+    </article>
+    <div class="stores">
+        <img src="./images/badge-iphone.png" alt="Download on the App Store">
+        <img src="./images/badge-android.png" alt="Get it on Google Play">
+    </div>
+  </section>
+  <aside class="jumbo-phones">
+    <img src="./images/phones.png" alt="phones">
+  </aside>
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li><a href="#">&copy; 2014 Instagram</a></li>
+    </ul>
+  </footer>
+  
+  
+  
+  
+  
+  
+  
+  
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  
 </body>
 </html>
