--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,9 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  Instagram
+
+  <main>
+  <div class="container-1">
+    <img src="./images/phones.png" alt="phones-image">
+  </div>
+
+  <div class="container-2">
+    <div class="container-3">
+      <img src="./images/brand.png" alt="brand-image">
+      
+      <a href="#" class="login-button">Loggin
+          <img src="images/home.png" alt="home-image">
+      </a>
+    </div>
+    
+    <div class="container-4">
+      <p><h1>Capture and Share the World's Moments</h1></p>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
+
+    <div class="container-5">
+      <img src="./images/badge-iphone.png" alt="badge-iphone">
+      <img src="./images/badge-android.png" alt="badge-android">
+    </div>
+  </div>
+  </main>
+  
+  <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+
+</body>
+</html>
+
+  <!-- Instagram
 
   Capture and Share the World's Moments
 
@@ -26,6 +73,4 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
-</body>
-</html>
+  &copy; 2014 Instagram -->
