--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,30 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-  Instagram
+<body class="body-style">
+  <main class="general-content">
+    <div><img src="images/brand.png" alt="branding-ig"></div>
+    <div><img src="images/phones.png" alt="iphone-mockup"></div>
+    <button class="log-btn">Log in</button>
+    <div class="text-content">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+    </div>
 
-  Capture and Share the World's Moments
+    <img src="images/badge-iphone.png"alt="ios-store">
+    <img src="images/badge-android.png" alt="play-store">
+  </main>
+  <footer>
+    <ul class="inline-list">
+      <li>
+        <a href="#structure">About us</a>
+      </li>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <li>
+        <a href="#structure">Support</a>
+      </li>
+      <li>
+        <a href="#structure">Blog</a>
+      </li>
+      <li>
+        <a href="#structure">APi</a>
+      <li>
+        <a href="#structure">Jobs</a>
+      </li>
+      <li>
+        <a href="#structure">Privacy</a>
+      </li>
+      <li>
+        <a href="#structure">Terms</a>
+      </li>
+  </footer>
 
   &copy; 2014 Instagram
 </body>
