--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,7 +15,7 @@
         <a href="#"><img src="./images/home.png" alt="" class="src"><span>Log In</span></a>
       </div>
       <div class="description">
-        <h1>Capture and Share the World's Moments</h1>
+        <h1>Capture and Share<br> the World's Moments</h1>
 
         <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
@@ -41,7 +41,7 @@
         <li>Jobs</li>
         <li>Privacy</li>
         <li>Terms</li>
-        <li class="last">&copy; 2014 Instagram</li>
+        <li>&copy; 2014 Instagram</li>
       </ul>
     </footer>
   </main>
