--- a/starter-code/index2.html
+++ b/starter-code/index2.html
@@ -10,7 +10,7 @@
                 <img src="../starter-code/images/phones.png" alt="phone">
             </section>
             <section>
-                <section>
+                <section class="flex-container">
                     <img src="../starter-code/images/brand.png" alt="brand">
                     <button>
                         <img src="../starter-code/images/home.png" alt="home">Log in
@@ -29,7 +29,7 @@
             </section>
         </div>
     </body>
-    <footer class="flex-container flex-row">
+    <footer>
             <ul>
               <li><a href="$">About Us</a></li>
               <li><a href="">Support</a></li>
