--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,11 +15,12 @@
     <div class="container-3">
       <img src="./images/brand.png" alt="brand-image">
       
-      <a href="#" class="login-button">Loggin
+      <a href="#" class="login-button">Log in
           <img src="images/home.png" alt="home-image">
       </a>
     </div>
     
+    <div class="container-6">
     <div class="container-4">
       <p><h1>Capture and Share the World's Moments</h1></p>
       <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
@@ -31,20 +32,21 @@
       <img src="./images/badge-iphone.png" alt="badge-iphone">
       <img src="./images/badge-android.png" alt="badge-android">
     </div>
+    </div>
   </div>
   </main>
   
   <footer>
     <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-      <li>&copy; 2014 Instagram</li>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</</li>
     </ul>
   </footer>
 
