First time i remembered to commit

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="https://meyerweb.com/eric/tools/css/reset/reset.css">
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <section class="mainSection">
+    <div class="leftSection">
+      <img src="./images/phones.png" alt="Example Phones">
+    </div>
+    <section class="rightSection">
+      <section class="topRight">
+        <div class="logo">
+          <img src="./images/brand.png" alt="Instagram Logo">
+        </div>
+        <div class="logIn">
+          <img src="./images/home.png" alt="Log In Button">
+          <span>Log In</span>
+        </div>
+      </section>
+      <section class="middleRight">
+        <h2>Capture and Share the World's Moments</h2>
+        <p id="one">Instagram is a <strong>fast</strong> , <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+        <p id="two">
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p id="three">Oh yeah, did we mention it's free?</p>
+      </section>
+      <section class="bottomRight">
+        <div class="android">
+          <img src="./images/badge-android.png" alt="GooglePlay">
+        </div>
+        <div class="ios">
+          <img src="./images/badge-iphone.png" alt="AppleStore">
+        </div>
+      </section>
+    </section>
+  </section>
+  <div class="bottomPage">
+    <nav id="menu">
+      <a href="">ABOUT US</a> |
+      <a href="">SUPPORT</a> |
+      <a href="">BLOG</a> |
+      <a href="">PRESS</a>
+      <a href="">API</a> |
+      <a href="">JOBS</a> |
+      <a href="">PRIVACY</a> |
+      <a href="">TERMS</a>
+    </nav>
+    <div class="copyright">
+      &copy; 2014 Instagram
+    </div>
+  </div>
 </body>
+
 </html>
