--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,10 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+
+  <div class="father">
+    <div>
+      <img src="images/phones.png" alt="Iphones">
+    </div>
+
+    <div>
+      <div>
+        <img src="images/brand.png" alt="Instagram name">
+        <button><img src="images/home.png" alt="house"> Log in</button>
+      </div>
+
+      <div>
+        <h1> Capture and Share the World's Moments </h1>
+        <h2>Instagram is a fast, beautiful and fun way to share your life with friends and family.</h2>
+        <P>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that easy.
+          You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </P>
+        <h3> Oh yeah, did we mention it's free?</h3>
+        <img src="images/badge-iphone.png" alt="app store">
+        <img src="images/badge-android.png" alt="google play">
+      </div>
+    </div>
+  </div>
+
+  <div class="father">
+    <input type="button" value="About Us">
+    <input type="button" value="Support">
+    <input type="button" value="Blog">
+    <input type="button" value="Press">
+    <input type="button" value="API">
+    <input type="button" value="Jobs">
+    <input type="button" value="Privacy">
+    <input type="button" value="Terms">
+
+    <h4> &copy; 2014 Instagram</h4>
+  </div>
+
+
+
+  <!-- Instagram
 
   Capture and Share the World's Moments
 
@@ -24,8 +68,8 @@
   API
   Jobs
   Privacy
-  Terms
+  Terms -->
 
-  &copy; 2014 Instagram
 </body>
+
 </html>
