--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+<body class="flex">
+    <section>
+    <img src="images/phones.png" alt="Phones img">
+  </section>
+  <section >
+    <div>
+      <img src="images/brand.png" alt="logo Instagram">
+      <button><img src="images/home.png" alt="home log in">Log In </button>
+    </div>
+    <div>
+      <h4> Capture and Share the World's Moments</h4>
+      <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family. </p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <button><img src="images/badge-iphone.png" alt="logo i-phone"></button>
+      <button><img src="images/badge-android.png" alt="logo android"></button>
+    </div>
+  </section>
+  <footer>
+    <section>
+    <nav class="flex">
+      <a href="#">About Us</a>
+      <a href="#">Support</a>
+      <a href="#">Blog</a>
+      <a href="#">Press</a>
+      <a href="#">API</a>
+      <a href="#">Jobs</a>
+      <a href="#">Privacy</a>
+      <a href="#">Terms</a>
+      <p>&copy; 2014 Instagram </p>
+    </nav>
+  </footer>
+</section>
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
+
+
+  <!--Instagram
+
+
+
+
+  
