--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,8 +4,18 @@
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <section>
+  <img class= "image-phone" src="images/phones.png">
+  </section>
 
+  <section>
+<div>
+  <img class="logo-istagram" src="images/brand.png">
+  <button><img src="images/home.png" alt="Home-Log-in">Log In</button> 
+</div>
+
+
+  
   Capture and Share the World's Moments
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
@@ -27,5 +37,6 @@
   Terms
 
   &copy; 2014 Instagram
+</section>
 </body>
 </html>
