--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,18 +5,32 @@
 </head>
 <body>
   Instagram
+<div>
 
+<img src="images/phones.png" class="iphonepicture">
 
+</div>
 
+  <div class="div1">
+<img src="images/brand.png" class="instagramlogo">
+  
+<button> <img src="images/home.png" class="homepicture">Log In 
+</button>
+</div>
 
+</section>
 
-  Capture and Share the World's Moments
+<section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <h1> Capture and Share the World's Moments </h1>
+
+ <p> Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
+  Oh yeah, did we mention it's free? </p>
+
+</section>
 
   Download on the App Store
   Get it on Google Play
@@ -30,6 +44,8 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+</section>
+
+copy; 2014 Instagram
 </body>
 </html>
