--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="../starter-code/css/main.css">
+
 <head>
   <title>Instagram</title>
 </head>
-<body>
-  Instagram
+<body >
 
-  Capture and Share the World's Moments
+<div class="flex-one">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <span>
+        <img src="../starter-code/images/phones.png" alt="phones">
+    </span>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    <header class="flex-header">
+      <img src="../starter-code/images/brand.png" alt="Instagram">
+     <button  class="button" type="button"> <img src="../starter-code/images/home.png" alt="home"> log in </button>
+    </header>
 
-  Oh yeah, did we mention it's free?
+  </div>
 
-  Download on the App Store
-  Get it on Google Play
+<div>
+<section class="capture">
+      <h1> Capture and Share the World's Moments </h1>
+        <p>Instagram is a <strong> fast, beautiful </strong> and <strong>fun </strong> way to share your life with friends and family. </p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </p>
+        <p>Oh yeah, did we mention it's free?</p>
+      </section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<aside>
+  <img src="../starter-code/images/badge-iphone.png" alt="Download on the App Store">
+  <img src="../starter-code/images/badge-android.png" alt="Get it on Google Play">
+</aside>
 </body>
+
+</div>
+
+  <footer>
+    <small class="flex-footer">
+      <a href= "#"> About Us</a>
+      <a href= "#"> Support</a>
+      <a href= "#"> Blog</a>
+      <a href= "#"> Press </a>
+      <a href= "#"> API </a>
+      <a href= "#"> Jobs</a>
+      <a href= "#"> Privacy</a>
+      <a href= "#"> Terms</a>
+    <span class="footer-insta">
+      <a href= "#"> &copy; 2014 Instagram</a>
+    </span>
+  </small>
+</footer>
+
 </html>
