--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,50 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  <header>
-    <img src="./images/brand.png" alt="Instagram">
-    <button class="btn-login"><img src="./images/home.png" alt="home icon">Log In</button>
-  </header>
-  <section class="info">
-    <article>
-        <h2>Capture and Share the World's Moments</h2>
-        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-        <p>Oh yeah, did we mention it's free?</p>
-    </article>
-    <div class="stores">
-        <img src="./images/badge-iphone.png" alt="Download on the App Store">
-        <img src="./images/badge-android.png" alt="Get it on Google Play">
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://meyerweb.com/eric/tools/css/reset/reset.css"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>Instagram</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="controls">
+      <header class="header">
+        <img class="logo" src="./images/brand.png" alt="Instagram" />
+        <button class="btn-login">
+          <img src="./images/home.png" alt="home icon" />Log In
+        </button>
+      </header>
+      <section class="info">
+        <article>
+          <h2>Capture and Share the World's Moments</h2>
+          <p>
+            Instagram is a <span class="bold-word">fast, beautiful</span> and <span class="bold-word">fun</span> way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and
+            feel, then post to Instagram &mdash; it's that easy. You can even
+            share to Facebook, Twitter, Tumblr and more. It's a new way to see
+            the world.
+          </p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </article>
+        <div class="stores">
+          <img
+            src="./images/badge-iphone.png"
+            alt="Download on the App Store"
+          />
+          <img src="./images/badge-android.png" alt="Get it on Google Play" />
+        </div>
+      </div>
+      </section>
+      <aside class="jumbo-phones">
+        <img src="./images/phones.png" alt="phones" />
+      </aside>
     </div>
-  </section>
-  <aside class="jumbo-phones">
-    <img src="./images/phones.png" alt="phones">
-  </aside>
-  <footer>
-    <ul>
-      <li><a href="#">About Us</a></li>
-      <li><a href="#">Support</a></li>
-      <li><a href="#">Blog</a></li>
-      <li><a href="#">Press</a></li>
-      <li><a href="#">API</a></li>
-      <li><a href="#">Jobs</a></li>
-      <li><a href="#">Privacy</a></li>
-      <li><a href="#">Terms</a></li>
-      <li><a href="#">&copy; 2014 Instagram</a></li>
-    </ul>
-  </footer>
-  
-  
-  
-  
-  
-  
-  
-  
-
-  
-</body>
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><span class="copyright">&copy; 2014 Instagram</span></li>
+      </ul>
+    </footer>
+  </body>
 </html>
