Primer commit, clon instagram

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <div class="contenedor">
 
-  Capture and Share the World's Moments
+      <div class="moviles">
+        <img src="./images/phones.png" alt="" />
+      </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <div class="inicio">
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <div class="login">
+          <img src="./images/brand.png" alt="" class="logo" />
+          <button><img src="./images/home.png" alt=""/><span>Log in</span></button>
+        </div>
 
-  Oh yeah, did we mention it's free?
+        <div class="contenido">
+          <h1>Capture and Share the World's Moments</h1>
+          <p>
+            Instagram is a <span class="bold">fast, beautiful</span> and <span class="bold">fun</span> way to share your life with
+            friends and family. Take a picture or video, choose a filter to
+            transform its look and feel, then post to Instagram &mdash; it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more.
+            It's a new way to see the world. Oh yeah, did we mention it's free?
+          </p>
+        </div>
 
-  Download on the App Store
-  Get it on Google Play
+        <div class="logos">
+          <img src="./images/badge-iphone.png" alt="" />
+          <img src="./images/badge-android.png" alt="" />
+        </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      </div>
+    </div>
 
-  &copy; 2014 Instagram
-</body>
+    <footer>
+      <ul class="lista">
+        <a href="">About Us</a></li>
+        <a href="">Support</a></li>
+        <a href="">Blog</a></li>
+        <a href="">Press</a></li>
+        <a href="">API</a></li>
+        <a href="">Jobs</a></li>
+        <a href="">Privacy</a></li>
+        <a href="">Terms</a></li>
+        <a href="" class="copy">2014 Instagram</a></li>
+      </ul>
+    </footer>
+  </body>
 </html>
