--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="columnas">
+  <section >
+    <img src="images/phones.png" alt="dos telefonos">
+  </section>
+  <div class="div2">
+  <section >
+    <section class="logo">
+      <a  href="#"><img src="images/brand.png" alt="logo de instagram" /></a>
+  <link rel="stylesheet" href="">
+  <button class="logo button-edit"><img src="images/home.png" >Log in</button>
+</section>
+<section class = "background text-section">
+  <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+  <p> Instagram is a<strong>fast</strong>,<strong>beautiful</strong>and<strong>fun</strong>way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <p>Oh yeah, did we mention it's free?</p>
+</section>
+<section>
+    <a  
+      href="#"><img src="images/badge-iphone.png" alt="link para app store" />
+      </a>
+      <a 
+      href="#"><img src="images/badge-android.png" alt="link para Play store" />
+    </a>
+  
+</section>
+</section>
+</div>
+</div>
+<footer >
+    <nav >
+        <ul class="row">
+            <li> <a style="text-decoration:none"  href="#"> About Us </a> </li>
+            <li> <a style="text-decoration:none"  href="#"> Support </a> </li>
+            <li> <a style="text-decoration:none"  href="#"> Blog </a> </li>
+            <li> <a style="text-decoration:none" href="#"> Press </a> </li>
+            <li> <a style="text-decoration:none" href="#"> API </a> </li>
+            <li> <a style="text-decoration:none" href="#"> Jobs </a> </li>
+            <li><a style="text-decoration:none" href="#">Privacy</a></li>
+            <li><a style="text-decoration:none" href="#">Terms</a></li>
+            <li><p class>&copy; 2014 Instagram</p></li>
+        </ul>
+    </nav>
+</section>
 </body>
 </html>
