--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,68 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="display-flex">
+  <div>
+      <img src="images/phones.png" alt="phones">
+  </div>
+  <div class="column">
+    <div class= login>
+      <img src="images/brand.png" alt="Instagram logo">
+      <a href="#">Log in</a>
+    </div>
+    <div class="backgroundblue">
+      <h1>
+          Capture and Share the World's Moments
+      </h1>
+      <p>
+        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      </p>
+      <p>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
+      <p>
+        Oh yeah, did we mention it's free?
+      </p>
+    </div>
+    <div class="buttom">
+      <img src="images/badge-iphone.png" alt="app store logo">
+      <img src="images/badge-android.png" alt="play sotre logo">
+    </div>
+  </div>  
+</div>
 </body>
+<footer>
+  <ul>
+    <li>
+      About Us
+    </li>
+    <li>
+      Support
+    </li>
+    <li>
+      Blog
+    </li>
+    <li>
+      Press
+    </li>
+    <li>
+      API
+    </li>
+    <li>
+      Jobs
+    </li>
+    <li>
+      Privacy
+    </li>
+    <li>
+      Terms
+    </li>
+    <li class= "color">
+      &copy; 2014 Instagram
+    </li>
+  </ul>
+</footer>
 </html>
