--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,22 +5,27 @@
   <title>Instagram</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body class="body-style">
   <main class="general-content">
-    <div><img src="images/brand.png" alt="branding-ig"></div>
-    <div><img src="images/phones.png" alt="iphone-mockup"></div>
-    <button class="log-btn">Log in</button>
+    <div>
+      <img src="images/brand.png" alt="branding-ig">
+    </div>
+    <div>
+      <img src="images/phones.png" alt="iphone-mockup">
+    </div>
     <div class="text-content">
       <h1>Capture and Share the World's Moments</h1>
-      <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+      <p>Instagram is a <span>fast</span>, <span>beutifull</span> and <span>fun</span> way to share your life with friends and family.</p>
       <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
         that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
       <p>Oh yeah, did we mention it's free?</p>
     </div>
-
-    <img src="images/badge-iphone.png"alt="ios-store">
-    <img src="images/badge-android.png" alt="play-store">
+    <button class="log-btn">Log in</button>
   </main>
+  <img src="images/badge-iphone.png" alt="ios-store">
+  <img src="images/badge-android.png" alt="play-store">
+
   <footer>
     <ul class="inline-list">
       <li>
@@ -48,4 +53,5 @@
 
   &copy; 2014 Instagram
 </body>
+
 </html>
