primer commit instagram

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/reset.css" />
+  <link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body>
-  Instagram
+  <div id="parte-arriba">
+    <div id="telefonos">
+      <img src="images/phones.png" />
+    </div>
+    <div id="resto">
 
-  Capture and Share the World's Moments
+      <header>
+        <div>
+          <img src="images/brand.png" />
+        </div>
+        <div id="log-in">
+          <input type="button" value="Log in" />
+        </div>
+      </header>
+      <div id="restodiv">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <h1>
+          Capture and Share the World's Moments
+        </h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        </p>
 
-  Oh yeah, did we mention it's free?
+        <p>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+          that
+          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
 
-  Download on the App Store
-  Get it on Google Play
+        <p>
+          Oh yeah, did we mention it's free?
+        </p>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+        Download on the App Store
+        Get it on Google Play
+      </div>
 
-  &copy; 2014 Instagram
+    </div>
+  </div>
+
+  <footer>
+
+    <button>About Us</button>
+    <button>Support</button>
+    <button>Blog</button>
+    <button>Press</button>
+    <button>API</button>
+    <button>Jobs</button>
+    <button>Privacy</button>
+    <button>Terms</button>
+    <button>&copy; 2014 Instagram</button>
+
+  </footer>
+
 </body>
+
 </html>
